[package]
name = "piphi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.23", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
pretty_assertions = "1.4.0"
regex = "1.9.3"
# inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
#   "llvm16-0",
# ] }
# llvm-sys = { version = "*", features = ["prefer-dynamic"] }
